# employee-api-cli

./: Dockerfile  README.md  helper.py  main.py  pyproject.toml
lib/: api.py  employee.py  termcolor.py
tests/: test_api.py  test_employee.py
