[tool.poetry]
name = "mb_challenge"
version = "0.1.0"
description = "API fetch & summarize for MalwareBytes interview challenge"
authors = ["Shahriar <shahriare8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
